testsuite/tests/properties/invalid_prop_args/less_args/test.lkt
from common import FooNode, BarCode

class BarNode: BarCode {
    fun base_prop(): Int = 12
}
